THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.

PL-node-v0.15.0
- CHG: Updated package.json devDependencies for Node 4.X and 5.X support.
- CHG: Updated package.gulp.json devDependencies for Node 4.X and 5.X support.

PL-node-v0.14.0
- ADD: Support for style modifiers
- ADD: Support for styleGuideExcludes
- THX: Thanks to @bramsmulders for the styleGuideExcludes pull request and @illepic for the original headsup
- FIX: Fix an issue where listitem blocks would only render if the pattern containing the block had a partial within it

PL-node-v0.13.1
- FIX: Allow verbose partials for list items
- THX: Thanks @e2tha-e

PL-node-v0.13.0
- FIX: Cleanup an old file and an incorrect entry in the .gitignore file
- CHG: Change order of pattern addition and ~variant pattern addition so they build naturally in the menu.
- THX: Thanks @e2tha-e for the flurry of pull requests!
- CHG: Update data merge function to prioritize handle pattern~variant.json files
- THX: Thanks @e2tha-e for finding, fixing, and unit testing the data merge issue.
- ADD: Support for recursive partial inclusion
- THX: Thanks @e2tha-e for making pattern inclusion a lot more robust. Great work!!!
- FIX: Improvements to style guide menu generation and capitalization.

PL-node-v0.12.0
 - ADD: Gulp support arrives with an optional configuration
 - ADD: Instructions how to install and run with Gulp
 - DEL: Deleted the sass modules from `package.json` files
 - CHG: Commented out all sass tasks in Grunt and Gulp files
 - CHG: Changed static web server provider to BrowserSync
 - CHG: Replaced the Style Guide toolbar Auto-Reload and Page Follow with a link to the BrowserSync UI
 - THX: Thanks @oscar-g for the initial work on the gulpfile!
 - ADD: An alternative, more verbose syntax for pattern partial inclusion
 - THX: Thanks @e2tha-e for the thoughtful addition with unit test coverage

PL-node-v0.11.0
 - ADD: Ignore pattern directories that start with an underscore.